Fixed bug with nav bar when viewing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,6 @@ body{
 
 /* ----- NAVIGATION BAR ----- */
 nav{
-    zoom: 120%;
     position: fixed;
     display: flex;
     justify-content: space-between;
